--- a/backend-api-pedido/src/main/resources/application.properties
+++ b/backend-api-pedido/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=root
 spring.datasource.password=2154
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
+spring.mvc.converters.preferred-json-mapper=gson
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
