--- a/backend-order/src/main/resources/application.properties
+++ b/backend-order/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.mvc.converters.preferred-json-mapper=gson
 
 
 spring.main.banner-mode=off
