--- a/backend-order/src/main/resources/application.properties
+++ b/backend-order/src/main/resources/application.properties
@@ -16,6 +16,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.converters.preferred-json-mapper=gson
 
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operations-sorter=method
+
 
 spring.main.banner-mode=off
 
