--- a/backend-api-pedido/pom.xml
+++ b/backend-api-pedido/pom.xml
@@ -92,8 +92,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.6.14</version>
+			<version>1.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
