--- a/backend-api-pedido/src/main/resources/application.properties
+++ b/backend-api-pedido/src/main/resources/application.properties
@@ -14,6 +14,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operations-sorter=method
 
 
 
